# G_interview

./: .coverage  .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  langgraph.json  plan.md  prd.md  pyproject.toml  pytest.ini
docs/: decisions.md
docs/api/: README.md
docs/development/: README.md
docs/user-guide/: README.md  python.md
src/adriacb_galtea/: __init__.py  config.py
src/adriacb_galtea/api/: __init__.py  app.py  models.py  routes.py  run.py
src/adriacb_galtea/api/services/: __init__.py  graph_service.py  injection_service.py
src/adriacb_galtea/config/: settings.py
src/adriacb_galtea/core/: __init__.py  agent.py  base.py  config.py  document_processor.py  embeddings.py  graph.py  langfuse_service.py  state.py  tools.py  vector_store.py
src/adriacb_galtea/core/config/: __init__.py  settings.py
src/adriacb_galtea/utils/: __init__.py  logging.py
tests/: conftest.py  test_config.py  test_document_processor.py  test_embeddings.py  test_injection.py  test_vector_store.py
